--- a/restaurant.html
+++ b/restaurant.html
@@ -60,17 +60,16 @@
     <!-- End reviews -->
     <section id="add-review-container">
       <h1 id="leave-review" tabindex="0">Leave a Review</h1>
-      <form>
+      <form id="review-form">
         <label for="name">Name</label>
-        <input id="name" type="text" placeholder="Name" required>
+        <input id="name" type="text" placeholder="Anonymous">
         <label for="rating">Rating</label>
-        <select id="rating" required>
-          <option value="none" selected disabled hidden>Choose a rating</option>
+        <select id="rating">
           <option value="1">1</option>
           <option value="2">2</option>
           <option value="3">3</option>
           <option value="4">4</option>
-          <option value="5">5</option>
+          <option value="5" selected>5</option>
         </select>
         <label for="comments">Comments</label>
         <textarea id="comments" placeholder="Write your review here"></textarea>
